--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.SampleListActivity">
+        <activity
+            android:name=".activity.SampleListActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.StaticLineGraphActivity"></activity>
+        <activity
+            android:name=".activity.StaticLineGraphActivity"
+            android:screenOrientation="landscape" />
     </application>
 
 </manifest>
