--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity
             android:name=".activity.SampleListActivity"
             android:screenOrientation="portrait">
@@ -22,6 +22,9 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".activity.StaticMultiLineGraphActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".activity.DynamicLineGraphActivity"
             android:screenOrientation="landscape" />
     </application>
 
