--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_graph"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
@@ -25,6 +25,9 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".activity.DynamicLineGraphActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".activity.DynamicMultiLineGraphActivity"
             android:screenOrientation="landscape" />
     </application>
 
